--- a/alacritty.yml
+++ b/alacritty.yml
@@ -163,36 +163,64 @@ debug.persistent_logging: true
 # If `true`, bold text is drawn using the bright color variants.
 draw_bold_text_with_bright_colors: true
 
-# Colors (Gruvbox dark)
 colors:
   # Default colors
   primary:
-    # hard contrast: background = '0x1d2021'
-    background: '0x282828'
-    # soft contrast: background = '0x32302f'
-    foreground: '0xebdbb2'
+    background: '0x1b182c'
+    foreground: '0xcbe3e7'
 
   # Normal colors
   normal:
-    black:   '0x282828'
-    red:     '0xcc241d'
-    green:   '0x98971a'
-    yellow:  '0xd79921'
-    blue:    '0x458588'
-    magenta: '0xb16286'
-    cyan:    '0x689d6a'
-    white:   '0xa89984'
+    black:   '0x100e23'
+    red:     '0xff8080'
+    green:   '0x95ffa4'
+    yellow:  '0xffe9aa'
+    blue:    '0x91ddff'
+    magenta: '0xc991e1'
+    cyan:    '0xaaffe4'
+    white:   '0xcbe3e7'
 
   # Bright colors
   bright:
-    black:   '0x928374'
-    red:     '0xfb4934'
-    green:   '0xb8bb26'
-    yellow:  '0xfabd2f'
-    blue:    '0x83a598'
-    magenta: '0xd3869b'
-    cyan:    '0x8ec07c'
-    white:   '0xebdbb2'
+    black:   '0x565575'
+    red:     '0xff5458'
+    green:   '0x62d196'
+    yellow:  '0xffb378'
+    blue:    '0x65b2ff'
+    magenta: '0x906cff'
+    cyan:    '0x63f2f1'
+    white:   '0xa6b3cc'
+
+# Colors (Gruvbox dark)
+#colors:
+# # Default colors
+# primary:
+#   # hard contrast: background = '0x1d2021'
+#   background: '0x282828'
+#   # soft contrast: background = '0x32302f'
+#   foreground: '0xebdbb2'
+
+  # Normal colors
+  #normal:
+  #  black:   '0x282828'
+  #  red:     '0xcc241d'
+  #  green:   '0x98971a'
+  #  yellow:  '0xd79921'
+  #  blue:    '0x458588'
+  #  magenta: '0xb16286'
+  #  cyan:    '0x689d6a'
+  #  white:   '0xa89984'
+
+  # Bright colors
+  # bright:
+  #   black:   '0x928374'
+  #   red:     '0xfb4934'
+  #   green:   '0xb8bb26'
+  #   yellow:  '0xfabd2f'
+  #   blue:    '0x83a598'
+  #   magenta: '0xd3869b'
+  #   cyan:    '0x8ec07c'
+  #   white:   '0xebdbb2'
 
 # Colors (Tomorrow Night Bright)
 #colors:
